--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+
+*.blade.php diff=html
+*.css diff=css
+*.html diff=html
+*.md diff=markdown
+*.php diff=php
+
